<resources>
    <string name="app_name">Assignment 5</string>
    <string name="heading">Select user-type</string>
    <string name="random_user">random</string>
    <string name="female_user">female</string>
    <string name="male_user">male</string>
    <string name="load_user">Load</string>
    <string name="info_load_user">Press the button to load a user.</string>
    <string name="error_parsing">Failure while parsing data from the API.</string>
    <string name="error_api_connection">Error while connecting to the API.</string>
</resources>