<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/headingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heading"
        android:textSize="20sp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/userTypeGroup" />

    <RadioGroup
        android:id="@+id/userTypeGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/headingTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/loadUserButton">

        <RadioButton
            android:id="@+id/randomUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random_user" />

        <RadioButton
            android:id="@+id/femaleUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/female_user" />

        <RadioButton
            android:id="@+id/maleUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male_user" />

    </RadioGroup>

    <Button
        android:id="@+id/loadUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_user"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/headingTextView"
        app:layout_constraintStart_toEndOf="@+id/userTypeGroup"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/userDataGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="userImage,userName,userStreetHouseNumber,userPostCodeCity,userCountry" />

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.3"
        android:src="@drawable/user_preview"
        android:layout_marginTop="64dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@+id/userTypeGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/userImage"
        app:layout_constraintStart_toStartOf="@+id/userImage"
        tools:text="Max Mustermann" />

    <TextView
        android:id="@+id/userStreetHouseNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        app:layout_constraintStart_toStartOf="@+id/userImage"
        tools:text="Musterstr. 1" />
    
    <TextView
        android:id="@+id/userPostCodeCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/userStreetHouseNumber"
        app:layout_constraintStart_toStartOf="@+id/userImage"
        tools:text="12345 Musterstadt" />

    <TextView
        android:id="@+id/userCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/userPostCodeCity"
        app:layout_constraintStart_toStartOf="@+id/userImage"
        tools:text="Germany" />

    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/info_load_user"
        app:layout_constraintTop_toTopOf="@+id/userImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/userCountry" />

</androidx.constraintlayout.widget.ConstraintLayout>